# Diacritical-Characters

./: .gitignore  README.md  gui.py  pyproject.toml  requirements.txt  setup.py  string_maker.py
.github/workflows/: build-gui-exe.yml  release-gui-exe.yml
pickle/: sorted_source.p  superscript_dict.p  word_list.p
src/diacritical_characters/: __init__.py  build_popup.py  core.py  corpus.py  gui.py
txt/: filtered_list.txt  filtered_set.txt  sorted_source.txt
