[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "diacritical-characters"
version = "0.1.0"
description = "Generate playful diacritical text and word suggestions."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PySide6",
    "nltk",
    "wordfreq",
    "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
